// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleClusterDialog /> renders correctly 1`] = `
<Modal
  className="edit-cluster-modal edit-cluster-modal-rhinfra"
  isPending={false}
  isSmall={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale cluster"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={8}
      >
        <Field
          component={[Function]}
          currentNodeCount={4}
          isDisabled={false}
          isEditingCluster={true}
          label="Compute node count"
          name="nodes_compute"
        />
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="load_balancers"
          label="Load balancers"
        >
          <Field
            component={[Function]}
            currentValue="4"
            disabled={false}
            label="Load balancers"
            name="load_balancers"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="persistent_storage"
          label="Persistent storage"
        >
          <Field
            component={[Function]}
            currentValue="107374182400"
            disabled={false}
            label="Persistent storage"
            name="persistent_storage"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
    </Grid>
  </Form>
</Modal>
`;

exports[`<ScaleClusterDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  className="edit-cluster-modal edit-cluster-modal-rhinfra"
  isPending={false}
  isSmall={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale cluster"
>
  <ErrorBox
    message="Error editing cluster"
    response={
      Object {
        "erorMessage": "this is an error",
        "error": true,
      }
    }
  />
  <Form
    onSubmit={[MockFunction]}
  >
    <Grid
      hasGutter={true}
    >
      <GridItem
        span={8}
      >
        <Field
          component={[Function]}
          currentNodeCount={4}
          isDisabled={false}
          isEditingCluster={true}
          label="Compute node count"
          name="nodes_compute"
        />
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="load_balancers"
          label="Load balancers"
        >
          <Field
            component={[Function]}
            currentValue="4"
            disabled={false}
            label="Load balancers"
            name="load_balancers"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
      <GridItem
        span={8}
      >
        <FormGroup
          fieldId="persistent_storage"
          label="Persistent storage"
        >
          <Field
            component={[Function]}
            currentValue="107374182400"
            disabled={false}
            label="Persistent storage"
            name="persistent_storage"
          />
        </FormGroup>
      </GridItem>
      <GridItem
        span={4}
      />
    </Grid>
  </Form>
</Modal>
`;
